# RPi-Fan-Controller

./: CMakeLists.txt  README.md  fancontroller.service
src/: config.cpp  gpio.cpp  main.cpp  plock.cpp  utils.cpp
src/include/: config.hpp  gpio.hpp  main.hpp  plock.hpp  utils.hpp
